# dseNpsDataPipelineNew

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_pipeline.py
.devcontainer/: devcontainer.json
USA_National_Park_Service_Lands_20170930_4993375350946852027/: USA_Federal_Lands.dbf  USA_Federal_Lands.shp.xml  USA_Federal_Lands.shx
docker/: entrypoint.sh  run_docker.sh
envs/: py-env.yml
lib/: andrewAdaptLibrary.py
notebooks/python/: Full_Data_Extraction.ipynb  ParkCatalog_Demo.ipynb  Spatial_Comparison.ipynb  Tutorial_Coiled_Setup.ipynb
pipelines/: README.md  climate_extraction.py  config.py
src/dse_climate/: __init__.py  _core.py
